# hdiff-apply

./: Cargo.toml  README.md
common/: Cargo.toml
common/src/: lib.rs  path.rs  sophon_proto.rs  types.rs
hdiff-apply/: Cargo.toml
hdiff-apply/src/: app.rs  byte_convert.rs  cli.rs  main.rs  types.rs  update_package.rs
hdiff-apply/src/patchers/: custom_hdiff.rs  hdiff.rs  ldiff.rs  mod.rs
hpatchz/: Cargo.toml
hpatchz/src/: error.rs  lib.rs
seven-zip/: Cargo.toml
seven-zip/src/: error.rs  lib.rs
src/: binary_version.rs  deletefiles.rs  error.rs  hdiffmap.rs  main.rs  seven_util.rs  types.rs  update_mgr.rs  utils.rs  verifier.rs
src/update/: deletefiles.rs  hdiff.rs  ldiff.rs  manager.rs  manifest_proto.rs  mod.rs  verifier.rs
src/utils/: binary_version.rs  hpatchz.rs  mod.rs  pb_helper.rs  seven_zip.rs
