[workspace]
resolver = "2"
members = ["hdiff-apply", "seven-zip"]

[workspace.dependencies]
anyhow = "1.0.100"
thiserror = "2.0.17"
crossterm = "0.29.0"
zstd = "0.13.3"
serde = { version = "1.0.217", features = ["derive"] }
prost = "0.14.3"
rayon = "1.11.0"
serde_json = "1.0.149"
indicatif = "0.18.3"
hdiffpatch-rs = { git = "https://github.com/nie4/hdiffpatch-rs.git", branch = "master" }

seven-zip = { path = "seven-zip/" }

[profile.release]
strip = true
lto = true
opt-level = 3
codegen-units = 1
