[workspace]
resolver = "2"
members = ["hdiff-apply", "seven-zip"]

[workspace.dependencies]
anyhow = "1.0.103"
thiserror = "2.0.18"
crossterm = "0.29.0"
zstd = "0.13.3"
serde = { version = "1.0.228", features = ["derive"] }
prost = "0.14.4"
rayon = "1.12.0"
serde_json = "1.0.150"
indicatif = "0.18.6"
hdiffpatch-rs = { git = "https://github.com/nie4/hdiffpatch-rs.git", branch = "master" }

seven-zip = { path = "seven-zip/" }

[profile.release]
strip = true
lto = true
opt-level = 3
codegen-units = 1
