[package]
name = "hdiff-apply"
version = "2.0.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
zstd.workspace = true
prost.workspace = true
rayon.workspace = true
tempfile.workspace = true
serde_json.workspace = true
common.workspace = true
seven-zip.workspace = true
indicatif.workspace = true
hdiffpatch-rs.workspace = true
